--- a/index.html
+++ b/index.html
@@ -14,7 +14,27 @@
             margin: 0;
             font-family: system-ui, sans-serif;
             background: #f5f5f5;
-            padding-bottom: 80px;
+            padding: 0 0 80px;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        #scanner-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: black;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000; /* Damit es über allem liegt */
+        }
+
+        #reader {
+            width: 100%;
+            height: 100%;
         }
 
         .header {
@@ -237,7 +257,10 @@
         <button class="btn btn-add" onclick="generateQR()">📤 Teilen</button>
         <div id="qrcode"></div>
         <button class="btn btn-add" onclick="startScanner()">📥 Laden</button>
-        <div id="reader" style="width:300px; margin:20px auto; display:none;"></div>
+        <div id="scanner-container">
+            <div id="reader"></div>
+            <button class="btn btn-back" style="position:absolute; top:10px; right:10px;" onclick="closeScanner()">✖️ Schließen</button>
+        </div>
     </div>
 </div>
 
@@ -419,7 +442,9 @@
     }
 
     function startScanner() {
-        const html5QrCode = new Html5Qrcode("reader");
+        document.getElementById("scanner-container").style.display = "flex";
+
+        window.html5QrCode = new Html5Qrcode("reader"); // make it global
         html5QrCode.start(
             { facingMode: "environment" },
             {
@@ -438,6 +463,7 @@
                     renderConfigured();
                     alert("Getränkeliste importiert!");
                     html5QrCode.stop();
+                    document.getElementById("scanner-container").style.display = "none";
                 } catch (e) {
                     alert("Fehler beim Importieren");
                 }
@@ -446,6 +472,16 @@
                 // optional: Scan-Fehler ignorieren
             }
         );
+    }
+
+    function closeScanner() {
+        const container = document.getElementById("scanner-container");
+        container.style.display = "none";
+
+        // Stop the scanner if it's running
+        if (window.html5QrCode) {
+            window.html5QrCode.stop().catch(() => {});
+        }
     }
 
 </script>
