--- a/index.html
+++ b/index.html
@@ -19,17 +19,22 @@
             overflow: hidden;
         }
 
-        #scanner-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: black;
+        #qr-modal {
             display: none;
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(0,0,0,0.9);
             justify-content: center;
             align-items: center;
-            z-index: 1000; /* Damit es über allem liegt */
+            z-index: 9999;
+            flex-direction: column;
+        }
+        #qr-video { width: 90%; max-width: 600px; }
+        #close-btn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
         }
 
         #reader {
@@ -200,6 +205,7 @@
             margin-top: 20px;
         }
         #qrcode {
+            width: 100%;
             margin: 10px auto;
         }
     </style>
@@ -255,11 +261,14 @@
     <!-- 🔹 QR-Code Sharing Section -->
     <div class="qr-section">
         <button class="btn btn-add" onclick="generateQR()">📤 Teilen</button>
-        <div id="qrcode"></div>
+        <div id="qr-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:black; justify-content:center; align-items:center; z-index:1001; flex-direction:column;">
+            <button onclick="closeQR()" style="position:absolute; top:20px; right:20px; padding:10px 15px; font-size:1.2rem; border:none; border-radius:8px; background:#dc3545; color:white; cursor:pointer;">✖️ Schließen</button>
+            <div id="qr-fullscreen"></div>
+        </div>
         <button class="btn btn-add" onclick="startScanner()">📥 Laden</button>
-        <div id="scanner-container">
-            <div id="reader"></div>
-            <button class="btn btn-back" style="position:absolute; top:10px; right:10px;" onclick="closeScanner()">✖️ Schließen</button>
+        <div id="qr-modal">
+            <video id="qr-video"></video>
+            <button id="close-btn">Close</button>
         </div>
     </div>
 </div>
@@ -274,6 +283,7 @@
 <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/lz-string/libs/lz-string.min.js"></script>
 <script src="./lib/qr-code.js"></script>
+<script src="./lib/scan.js"></script>
 
 <script>
     let drinks = [];
@@ -339,7 +349,10 @@
         localStorage.setItem('order', JSON.stringify(order));
     }
 
-    const CONFIG_PASSWORD = "sternschnuppe"; // 🔒 Passwort hier festlegen
+    const CONFIG_PASSWORD = ""; // 🔒 Passwort hier festlegen
+
+    const qrModal = document.getElementById("qr-modal");
+    const videoElem = document.getElementById("qr-video");
 
     function toggleView() {
         if (view === 'main') {
@@ -433,17 +446,36 @@
     function generateQR() {
         const json = JSON.stringify(drinks);
         const compressed = LZString.compressToEncodedURIComponent(json);
-        document.getElementById("qrcode").innerHTML = "";
-        new QRCode(document.getElementById("qrcode"), {
+
+        const qrContainer = document.getElementById("qr-fullscreen");
+        qrContainer.innerHTML = ""; // clear previous QR
+        new QRCode(qrContainer, {
             text: compressed,
-            width: 256,
-            height: 256
+            width: 300,
+            height: 300
         });
+
+        document.getElementById("qr-overlay").style.display = "flex"; // show overlay
+    }
+
+    function closeQR() {
+        document.getElementById("qr-overlay").style.display = "none";
     }
 
     function startScanner() {
-        document.getElementById("scanner-container").style.display = "flex";
+        qrModal.style.display = "flex";
 
+        qrScanner = new QrScanner(videoElem, result => {
+            alert("QR Content: " + result);
+            qrScanner.stop();
+            qrModal.style.display = "none";
+        }, {
+            highlightScanRegion: true,
+            highlightCodeOutline: true,
+            maxScansPerSecond: 5
+        });
+        qrScanner.start();
+/*
         window.html5QrCode = new Html5Qrcode("reader"); // make it global
         html5QrCode.start(
             { facingMode: "environment" },
@@ -471,7 +503,7 @@
             errorMessage => {
                 // optional: Scan-Fehler ignorieren
             }
-        );
+        );*/
     }
 
     function closeScanner() {
@@ -483,6 +515,13 @@
             window.html5QrCode.stop().catch(() => {});
         }
     }
+
+    const closeBtn = document.getElementById("close-btn");
+
+    closeBtn.addEventListener("click", () => {
+        qrModal.style.display = "none";
+        if(qrScanner) qrScanner.stop();
+    });
 
 </script>
 </body>
