test link instead of qr code

--- a/index.html
+++ b/index.html
@@ -19,29 +19,6 @@
             overflow: hidden;
         }
 
-        #qr-modal {
-            display: none;
-            position: fixed;
-            top: 0; left: 0; right: 0; bottom: 0;
-            background: rgba(0,0,0,0.9);
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-            flex-direction: column;
-        }
-        #qr-video { width: 90%; max-width: 600px; }
-        #close-btn {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-        }
-
-        #reader {
-            width: 100%;
-            height: 100%;
-        }
-
         .header {
             background: #333;
             color: white;
@@ -200,14 +177,6 @@
             border-radius: 6px;
             cursor: pointer;
         }
-        .qr-section {
-            text-align: center;
-            margin-top: 20px;
-        }
-        #qrcode {
-            width: 100%;
-            margin: 10px auto;
-        }
     </style>
 </head>
 <body>
@@ -257,20 +226,7 @@
     <div style="text-align: center; margin-top: 30px;">
         <button class="btn btn-delete" onclick="resetDefaultDrinks()">Getränkeliste zurücksetzen</button>
     </div>
-
-    <!-- 🔹 QR-Code Sharing Section -->
-    <div class="qr-section">
-        <button class="btn btn-add" onclick="generateQR()">📤 Teilen</button>
-        <div id="qr-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:black; justify-content:center; align-items:center; z-index:1001; flex-direction:column;">
-            <button onclick="closeQR()" style="position:absolute; top:20px; right:20px; padding:10px 15px; font-size:1.2rem; border:none; border-radius:8px; background:#dc3545; color:white; cursor:pointer;">✖️ Schließen</button>
-            <div id="qr-fullscreen"></div>
-        </div>
-        <button class="btn btn-add" onclick="startScanner()">📥 Laden</button>
-        <div id="qr-modal">
-            <video id="qr-video"></video>
-            <button id="close-btn">Close</button>
-        </div>
-    </div>
+    <button class="btn" style="background:#007bff; color:white;" onclick="generateLink()">🔗 Link generieren</button>
 </div>
 
 <div class="summary">
@@ -282,8 +238,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/lz-string/libs/lz-string.min.js"></script>
-<script src="./lib/qr-code.js"></script>
-<script src="./lib/scan.js"></script>
 
 <script>
     let drinks = [];
@@ -336,6 +290,7 @@
     ];
 
     window.onload = () => {
+        loadFromURL();
         const stored = localStorage.getItem('drinks');
         drinks = stored ? JSON.parse(stored) : defaultDrinks;
         const ord = localStorage.getItem('order');
@@ -350,9 +305,6 @@
     }
 
     const CONFIG_PASSWORD = ""; // 🔒 Passwort hier festlegen
-
-    const qrModal = document.getElementById("qr-modal");
-    const videoElem = document.getElementById("qr-video");
 
     function toggleView() {
         if (view === 'main') {
@@ -442,86 +394,37 @@
         }
     }
 
-    /* 🔹 NEW QR SHARE FUNCTIONS */
-    function generateQR() {
-        const json = JSON.stringify(drinks);
-        const compressed = LZString.compressToEncodedURIComponent(json);
-
-        const qrContainer = document.getElementById("qr-fullscreen");
-        qrContainer.innerHTML = ""; // clear previous QR
-        new QRCode(qrContainer, {
-            text: compressed,
-            width: 300,
-            height: 300
+    function generateLink() {
+        const state = { drinks };
+        const compressed = LZString.compressToEncodedURIComponent(JSON.stringify(state));
+        const url = `${location.origin}${location.pathname}?state=${compressed}`;
+        navigator.clipboard.writeText(url).then(() => {
+            alert("Link kopiert! 📋");
+        }, () => {
+            prompt("Kopiere den Link:", url); // fallback
         });
-
-        document.getElementById("qr-overlay").style.display = "flex"; // show overlay
     }
 
-    function closeQR() {
-        document.getElementById("qr-overlay").style.display = "none";
-    }
-
-    function startScanner() {
-        qrModal.style.display = "flex";
-
-        qrScanner = new QrScanner(videoElem, result => {
-            alert("QR Content: " + result);
-            qrScanner.stop();
-            qrModal.style.display = "none";
-        }, {
-            highlightScanRegion: true,
-            highlightCodeOutline: true,
-            maxScansPerSecond: 5
-        });
-        qrScanner.start();
-/*
-        window.html5QrCode = new Html5Qrcode("reader"); // make it global
-        html5QrCode.start(
-            { facingMode: "environment" },
-            {
-                fps: 20,
-                qrbox: 0, // scannt das ganze Kamerabild
-                experimentalFeatures: { useBarCodeDetectorIfSupported: true }
-            },
-            qrMessage => {
-                try {
-                    const json = LZString.decompressFromEncodedURIComponent(qrMessage);
-                    drinks = JSON.parse(json);
-                    order = {};
-                    drinks.forEach(d => order[d.id] = 0);
-                    save();
-                    render();
-                    renderConfigured();
-                    alert("Getränkeliste importiert!");
-                    html5QrCode.stop();
-                    document.getElementById("scanner-container").style.display = "none";
-                } catch (e) {
-                    alert("Fehler beim Importieren");
+    // 🔹 Load drinks from URL if present
+    function loadFromURL() {
+        const params = new URLSearchParams(location.search);
+        if (params.has('state')) {
+            try {
+                const decoded = LZString.decompressFromEncodedURIComponent(params.get('state'));
+                if (decoded) {
+                    const state = JSON.parse(decoded);
+                    if (state.drinks) {
+                        drinks = state.drinks;
+                        order = {};
+                        drinks.forEach(d => order[d.id] = 0);
+                        save();
+                    }
                 }
-            },
-            errorMessage => {
-                // optional: Scan-Fehler ignorieren
+            } catch (e) {
+                console.error("Fehler beim Laden der Drinks:", e);
             }
-        );*/
-    }
-
-    function closeScanner() {
-        const container = document.getElementById("scanner-container");
-        container.style.display = "none";
-
-        // Stop the scanner if it's running
-        if (window.html5QrCode) {
-            window.html5QrCode.stop().catch(() => {});
         }
     }
-
-    const closeBtn = document.getElementById("close-btn");
-
-    closeBtn.addEventListener("click", () => {
-        qrModal.style.display = "none";
-        if(qrScanner) qrScanner.stop();
-    });
 
 </script>
 </body>
