--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             background: #f5f5f5;
             padding: 0 0 80px;
             height: 100%;
-            overflow: hidden;
         }
 
         .header {
@@ -319,6 +318,7 @@
         view = view === 'main' ? 'config' : 'main';
         document.querySelector('.main').style.display = view === 'main' ? 'block' : 'none';
         document.querySelector('.config').style.display = view === 'config' ? 'block' : 'none';
+        document.querySelector('.summary').style.display = view === 'config' ? 'none' : 'flex';
         if (view === 'config') renderConfigured();
     }
 
