--- a/index.html
+++ b/index.html
@@ -56,21 +56,40 @@
             padding: 10px;
             text-align: center;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+
+            /* 🔹 Equal height + structured layout */
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            min-height: 180px; /* adjust height as you like */
         }
 
         .drink-emoji {
             font-size: 1.8rem;
+            margin-bottom: 6px;
         }
 
         .drink-name {
             font-size: 0.95rem;
             font-weight: 600;
-            margin-top: 6px;
+            margin: 6px 0;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+
+            /* 🔹 Prevent long words from overflowing */
+            overflow-wrap: break-word;
+            word-break: break-word;
+            hyphens: auto;
         }
 
         .drink-name .unitprice {
             font-size: 0.7rem;
             font-weight: 300;
+            margin-top: 2px;
         }
 
         .controls {
@@ -180,7 +199,7 @@
 </head>
 <body>
 <div class="header">
-    🍺
+    <span id="eventNameHeader">🍺</span>
     <button class="config-btn" onclick="toggleView()">⚙️</button>
 </div>
 
@@ -189,6 +208,11 @@
 </div>
 
 <div class="config">
+    <h2>Veranstaltung konfigurieren</h2>
+    <div class="form-group">
+        <label for="eventName">Event-Name</label>
+        <input type="text" id="eventName" oninput="updateEventName(this.value)" />
+    </div>
     <h2>Getränk hinzufügen</h2>
     <div class="form-group">
         <label for="drinkName">Name</label>
@@ -225,7 +249,9 @@
     <div style="text-align: center; margin-top: 30px;">
         <button class="btn btn-delete" onclick="resetDefaultDrinks()">Getränkeliste zurücksetzen</button>
     </div>
-    <button class="btn" style="background:#007bff; color:white;" onclick="generateLink()">🔗 Link generieren</button>
+    <div style="text-align: center; margin-top: 30px;">
+        <button class="btn" style="background:#007bff; color:white;" onclick="generateLink()">🔗 Link generieren</button>
+    </div>
 </div>
 
 <div class="summary">
@@ -242,6 +268,7 @@
     let drinks = [];
     let order = {};
     let view = 'main';
+    let eventName = "";
 
     let defaultDrinks = [
         {
@@ -295,12 +322,25 @@
         const ord = localStorage.getItem('order');
         order = ord ? JSON.parse(ord) : {};
         drinks.forEach(d => order[d.id] ??= 0);
+
+        const storedEvent = localStorage.getItem('eventName');
+        eventName = storedEvent || "🍺";
+        document.getElementById("eventNameHeader").textContent = eventName;
+        document.getElementById("eventName").value = eventName;
+
         render();
     };
 
     function save() {
         localStorage.setItem('drinks', JSON.stringify(drinks));
         localStorage.setItem('order', JSON.stringify(order));
+        localStorage.setItem('eventName', eventName);
+    }
+
+    function updateEventName(val) {
+        eventName = val || "🍺";
+        document.getElementById("eventNameHeader").textContent = eventName;
+        save();
     }
 
     const CONFIG_PASSWORD = ""; // 🔒 Passwort hier festlegen
@@ -395,7 +435,7 @@
     }
 
     function generateLink() {
-        const state = { drinks };
+        const state = { drinks, eventName }; // 🔹 include eventName
         const compressed = LZString.compressToEncodedURIComponent(JSON.stringify(state));
         const url = `${location.origin}${location.pathname}?state=${compressed}`;
         navigator.clipboard.writeText(url).then(() => {
@@ -405,7 +445,6 @@
         });
     }
 
-    // 🔹 Load drinks from URL if present
     function loadFromURL() {
         const params = new URLSearchParams(location.search);
         if (params.has('state')) {
@@ -417,11 +456,16 @@
                         drinks = state.drinks;
                         order = {};
                         drinks.forEach(d => order[d.id] = 0);
-                        save();
                     }
+                    if (state.eventName) {
+                        eventName = state.eventName;
+                        document.getElementById("eventNameHeader").textContent = eventName;
+                        document.getElementById("eventName").value = eventName;
+                    }
+                    save();
                 }
             } catch (e) {
-                console.error("Fehler beim Laden der Drinks:", e);
+                console.error("Fehler beim Laden:", e);
             }
         }
     }
