--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         save();
     }
 
-    const CONFIG_PASSWORD = ""; // 🔒 Passwort hier festlegen
+    const CONFIG_PASSWORD = "sternschnuppe"; // 🔒 Passwort hier festlegen
 
     function toggleView() {
         if (view === 'main') {
